# audit-quality

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: mcp.json
.github/workflows/: ci.yml  deploy.yml
apps/document-ingestor/: Dockerfile  pyproject.toml
apps/document-ingestor/src/: config.py  drd.py  ingest_file.py  ingest_url.py  main.py  summarize.py
apps/document-ingestor/tests/: conftest.py  test_drd.py  test_health.py  test_ingest_file.py  test_ingest_url.py  test_summarize.py
apps/mcp-updates/: Dockerfile  package-lock.json  package.json
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
contractParsing/: AL_HTML_Time.py  HTML_to_Table.py  README.md  Untitled  auditReport_to_HTML  dart_to_HTML.py  document_id.txt  document_summary.txt  result.txt  unzipSubfolder.py
contractParsing/html/: 20230719000336.htm  (+18 more)
disclosureAnalysis/: Dockerfile  README.md  auditReportDate_listed.txt  auditReportDate_listed_sep.txt  otel_setup.py  reportDate.py  requirements.txt
docs/: PROJECT_SUMMARY.md  README.md  deploy.md  project-planning.md  project-summary.md  quality-update.txt  requirements.md  roadmap.md  setup.md  workflow.md
forward-auth/: Dockerfile  package.json  server.js
keycloak/: README.md
observability/: loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.yaml
policy/: README.md  package-lock.json  package.json
scripts/: setup-pgvector.sql  verify-compose.ps1  verify-compose.sh
traefik/: .gitignore  gen-certs.sh  traefik.yml
(+163 files in other folders)
